responsividade de about

--- a/pages/pageAbout/About.html
+++ b/pages/pageAbout/About.html
@@ -57,7 +57,7 @@
                     <ul class="list-about">
                         <h4>What I Do</h4>
                         <li>
-                            <p><span>Front-End Development</span>: Crafting responsive and dynamic interfaces using
+                            <p><span>Front-End Development:</span> Crafting responsive and dynamic interfaces using
                                 React, Vue.js, Angular, HTML5, CSS3, and JavaScript/TypeScript.</p>
                         </li>
                         <li>
