colocando rodape e arrumando responsividade

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         rel="stylesheet">
     <!-- Link CSS -->
     <link rel="stylesheet" href="./style/style.css">
+    <!-- icon -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css">
     <!-- FAVICON -->
     <link rel="shortcut icon" href="./imgs/logo-01.svg" type="image/x-icon">
     <title>PORTFÓLIO</title>
@@ -32,7 +34,6 @@
                 </ul>
             </nav>
         </header>
-
         <main class="main-container">
             <section class="welcome-section">
                 <div class="text-welcome">
@@ -46,7 +47,7 @@
                             <h4>Full Stack Developer</h4>
                             <p>Specializing in both front-end and back-end development.</p>
                         </li>
-                        
+
                         <li>
                             <h4>JavaScript Enthusiast</h4>
                             <p>Passionate about building interactive web applications.</p>
@@ -61,6 +62,16 @@
 
             </section>
         </main>
+
+        <footer class="rodape-container">
+            <ul class="rodape-links-redes-sociais">
+                <li class="cart-rede"><a href=""><i class="devicon-linkedin-plain"></i></a></li>
+                <li class="cart-rede"><a href=""><i class="devicon-github-original colored"></i></a></li>
+            </ul>
+
+            <small class="copy">&copy; 2025 Maximiano Jose de Andrade Neto. Todos os direitos reservados.</small>
+
+        </footer>
 
     </div>
 </body>
