--- a/pages/pageAbout/About.html
+++ b/pages/pageAbout/About.html
@@ -13,6 +13,8 @@
     <!-- STYLE CSS -->
     <link rel="stylesheet" href="../../style/style.css">
     <link rel="stylesheet" href="style.css">
+    <!-- icon -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css">
     <!-- FAVICON -->
     <link rel="shortcut icon" href="../../imgs/logo-01.svg" type="image/x-icon">
     <title>About</title>
@@ -78,6 +80,16 @@
                 </div>
             </section>
         </main>
+
+        <footer class="rodape-container">
+            <ul class="rodape-links-redes-sociais">
+                <li class="cart-rede"><a href=""><i class="devicon-linkedin-plain"></i></a></li>
+                <li class="cart-rede"><a href=""><i class="devicon-github-original colored"></i></a></li>
+            </ul>
+
+            <small class="copy">&copy; 2025 Maximiano Jose de Andrade Neto. Todos os direitos reservados.</small>
+
+        </footer>
 
     </div>
 </body>
