--- a/pages/pageContact/Contact.html
+++ b/pages/pageContact/Contact.html
@@ -16,8 +16,10 @@
     <!-- STYLE CSS -->
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="../../style/style.css">
+    <!-- icon -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css">
     <!-- FAVICON -->
-     <link rel="shortcut icon" href="../../imgs/logo-01.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="../../imgs/logo-01.svg" type="image/x-icon">
     <title>Contact</title>
 </head>
 
@@ -70,6 +72,16 @@
             </section>
 
         </main>
+
+        <footer class="rodape-container">
+            <ul class="rodape-links-redes-sociais">
+                <li class="cart-rede"><a href=""><i class="devicon-linkedin-plain"></i></a></li>
+                <li class="cart-rede"><a href=""><i class="devicon-github-original colored"></i></a></li>
+            </ul>
+
+            <small class="copy">&copy; 2025 Maximiano Jose de Andrade Neto. Todos os direitos reservados.</small>
+
+        </footer>
 
     </div>
 
