--- a/pages/pageProjects/Projects.html
+++ b/pages/pageProjects/Projects.html
@@ -160,6 +160,16 @@
 
         </main>
 
+        <footer class="rodape-container">
+            <ul class="rodape-links-redes-sociais">
+                <li class="cart-rede"><a href=""><i class="devicon-linkedin-plain"></i></a></li>
+                <li class="cart-rede"><a href=""><i class="devicon-github-original colored"></i></a></li>
+            </ul>
+
+            <small class="copy">&copy; 2025 Maximiano Jose de Andrade Neto. Todos os direitos reservados.</small>
+
+        </footer>
+
     </div>
 
 </body>
