links de redes sociais

--- a/pages/pageProjects/Projects.html
+++ b/pages/pageProjects/Projects.html
@@ -162,8 +162,8 @@
 
         <footer class="rodape-container">
             <ul class="rodape-links-redes-sociais">
-                <li class="cart-rede"><a href=""><i class="devicon-linkedin-plain"></i></a></li>
-                <li class="cart-rede"><a href=""><i class="devicon-github-original colored"></i></a></li>
+                <li class="cart-rede"><a href="https://www.linkedin.com/in/maximiano-jos%C3%A9-de-andrade-neto/"><i class="devicon-linkedin-plain"></i></a></li>
+                <li class="cart-rede"><a href="https://github.com/Maximiano-Andrade"><i class="devicon-github-original colored"></i></a></li>
             </ul>
 
             <small class="copy">&copy; 2025 Maximiano Jose de Andrade Neto. Todos os direitos reservados.</small>
