colocando icons na page projetos

--- a/pages/pageAbout/About.html
+++ b/pages/pageAbout/About.html
@@ -59,26 +59,34 @@
                     <p>Sinta-se à vontade para explorar meus projetos e, se tiver alguma dúvida ou quiser colaborar,
                         não hesite em entrar em contato!</p>
                     <ul class="list-about">
-                        <h4>O que eu faço:</h4>
+                        <h4>Hard Skills</h4>
                         <li>
-                            <p><span>Desenvolvimento Front-End:</span> Criação de interfaces responsivas e dinâmicas
-                                usando
-                                React, HTML5, CSS3 e JavaScript.</p>
+                            <ul>
+                                <li>
+                                    <h6>HTML</h6>
+                                    <i class="devicon-html5-plain"></i>
+                                </li>
+                                <li>
+                                    <h6>CSS</h6>
+                                    <i class="devicon-css3-plain"></i>
+                                </li>
+                                <li>
+                                    <h6>React</h6>
+                                    <i class="devicon-react-original"></i>
+                                </li>
+                                <li>
+                                    <h6>JavaScript</h6>
+                                    <i class="devicon-javascript-plain"></i>
+                                </li>
+                                <li>
+                                    <h6>MySQL</h6>
+                                    <i class="devicon-mysql-original"></i>
+                                </li>
+                            </ul>
+
+
                         </li>
-                        <li>
-                            <p><span>Desenvolvimento Back-End:</span> Construindo APIs robustas e lógica do lado do
-                                servidor com
-                                Node.js, Python, Java.</p>
-                        </li>
-                        <li>
-                            <p><span>Banco de dados e DevOps:</span> Trabalhando com SQL (MySQL) e NoSQL
-                                (MongoDB), além de plataformas de nuvem como AWS, Docker.</p>
-                        </li>
-                        <li>
-                            <p><span>Contribuições de código aberto:</span> Contribuindo ativamente para projetos de
-                                código aberto,
-                                aprimorando softwares desenvolvidos pela comunidade.</p>
-                        </li>
+
 
                     </ul>
                     <p><strong>Obrigado por visitar meu portfólio!</strong></p>
@@ -90,7 +98,7 @@
                     <h2>Formação Educacional</h2>
                 </div>
                 <div class="formacao-mais-detalhes">
-                    
+
                 </div>
             </section>
 
