adicionando icon a page sobre

--- a/pages/pageAbout/About.html
+++ b/pages/pageAbout/About.html
@@ -82,6 +82,10 @@
                                     <h6>MySQL</h6>
                                     <i class="devicon-mysql-original"></i>
                                 </li>
+                                <li>
+                                    <h6>Java</h6>
+                                    <i class="devicon-java-plain"></i>
+                                </li>
                             </ul>
 
 
