mundança em card e mundando para portugues

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
             <nav class="nav-menu">
                 <ul>
                     <li><a href="#home" class="active">Home</a></li>
-                    <li><a href="./pages/pageAbout/About.html">About</a></li>
-                    <li><a href="./pages/pageProjects/Projects.html">Projects</a></li>
-                    <li><a href="./pages/pageContact/Contact.html">Contact</a></li>
+                    <li><a href="./pages/pageAbout/About.html">Sobre</a></li>
+                    <li><a href="./pages/pageProjects/Projects.html">Projetos</a></li>
+                    <li><a href="./pages/pageContact/Contact.html">Contato</a></li>
                 </ul>
             </nav>
         </header>
@@ -38,24 +38,24 @@
             <section class="welcome-section">
                 <div class="text-welcome">
                     <h1>Welcome to my<br>Portfolio</h1>
-                    <p>My name is Max, I am a <span>Full Stack Developer</span> and this is my portfolio.</p>
+                    <p>Meu nome é Max, eu sou um <span>Desenvolvedor Full Stack</span> e este é meu portfólio.</p>
                 </div>
 
                 <div class="list-infor">
                     <ul>
                         <li>
-                            <h4>Full Stack Developer</h4>
-                            <p>Specializing in both front-end and back-end development.</p>
+                            <h4>Desenvolvedor Full Stack</h4>
+                            <p>Especializado em desenvolvimento front-end e back-end.</p>
                         </li>
 
                         <li>
-                            <h4>JavaScript Enthusiast</h4>
-                            <p>Passionate about building interactive web applications.</p>
+                            <h4>Entusiasta de JavaScript</h4>
+                            <p>Apaixonado por criar aplicações web interativas.</p>
                         </li>
 
                         <li>
-                            <h4>Open Source Contributor</h4>
-                            <p>Contributing to various open source projects.</p>
+                            <h4>Contribuidor de código aberto</h4>
+                            <p>Contribuindo para vários projetos de código aberto.</p>
                         </li>
                     </ul>
                 </div>
