--- a/pages/pageAbout/About.html
+++ b/pages/pageAbout/About.html
@@ -29,16 +29,16 @@
             <nav class="nav-menu">
                 <ul>
                     <li><a href="../../index.html">Home</a></li>
-                    <li><a href="#About" class="active">About</a></li>
-                    <li><a href="../pageProjects/Projects.html">Projects</a></li>
-                    <li><a href="../pageContact/Contact.html">Contact</a></li>
+                    <li><a href="#About" class="active">Sobre</a></li>
+                    <li><a href="../pageProjects/Projects.html">Projetos</a></li>
+                    <li><a href="../pageContact/Contact.html">Contato</a></li>
                 </ul>
             </nav>
         </header>
 
         <main class="about-container">
             <div class="title-about">
-                <h1>ABOUT ME</h1>
+                <h1>Sobre</h1>
             </div>
             <section class="about-section">
 
@@ -46,45 +46,62 @@
                 </div>
                 <div class="text-about">
                     <h2>Maximiano Jose de Andrade Neto</h2>
-                    <h3>Full Stack Developer</h3>
-                    <p>Hello! My name is Max, and I'm a passionate Full Stack Developer with expertise in both front-end
-                        and back-end development. This portfolio showcases my projects, skills, and contributions to the
-                        tech community
+                    <h3>Desenvolvedor Full Stack</h3>
+                    <p>Olá! Meu nome é Max e sou um Desenvolvedor Full Stack apaixonado, com experiência em
+                        desenvolvimento front-end
+                        e back-end. Este portfólio apresenta meus projetos, habilidades e contribuições para a
+                        comunidade tecnológica.
                     </p>
-                    <p>I thrive on building interactive, scalable, and user-friendly web applications that solve
-                        real-world problems. My development approach combines clean code, modern frameworks, and
-                        efficient architecture to deliver high-performance solutions.!</p>
-                    <p>Feel free to explore my projects, and if you have any questions or would like to collaborate,
-                        don't hesitate to reach out!</p>
+                    <p>Eu me dedico à criação de aplicações web interativas, escaláveis ​​e fáceis de usar que resolvem
+                        problemas do mundo real. Minha abordagem de desenvolvimento combina código limpo, frameworks
+                        modernos e
+                        arquitetura eficiente para entregar soluções de alto desempenho.</p>
+                    <p>Sinta-se à vontade para explorar meus projetos e, se tiver alguma dúvida ou quiser colaborar,
+                        não hesite em entrar em contato!</p>
                     <ul class="list-about">
-                        <h4>What I Do</h4>
+                        <h4>O que eu faço:</h4>
                         <li>
-                            <p><span>Front-End Development:</span> Crafting responsive and dynamic interfaces using
-                                React, Vue.js, Angular, HTML5, CSS3, and JavaScript/TypeScript.</p>
+                            <p><span>Desenvolvimento Front-End:</span> Criação de interfaces responsivas e dinâmicas
+                                usando
+                                React, HTML5, CSS3 e JavaScript.</p>
                         </li>
                         <li>
-                            <p><span>Back-End Development:</span> Building robust APIs and server-side logic with
-                                Node.js, Python (Django/Flask), Ruby on Rails, and PHP.</p>
+                            <p><span>Desenvolvimento Back-End:</span> Construindo APIs robustas e lógica do lado do
+                                servidor com
+                                Node.js, Python, Java.</p>
                         </li>
                         <li>
-                            <p><span>Database & DevOps:</span> Working with SQL (PostgreSQL, MySQL) and NoSQL (MongoDB,
-                                Firebase), along with cloud platforms like AWS, Docker, and CI/CD pipelines.</p>
+                            <p><span>Banco de dados e DevOps:</span> Trabalhando com SQL (MySQL) e NoSQL
+                                (MongoDB), além de plataformas de nuvem como AWS, Docker.</p>
                         </li>
                         <li>
-                            <p><span>Open Source Contributions:</span> Actively contributing to open source projects,
-                                enhancing community-driven software.</p>
+                            <p><span>Contribuições de código aberto:</span> Contribuindo ativamente para projetos de
+                                código aberto,
+                                aprimorando softwares desenvolvidos pela comunidade.</p>
                         </li>
 
                     </ul>
-                    <p><strong>Thank you for visiting my portfolio!<strong></p>
+                    <p><strong>Obrigado por visitar meu portfólio!</strong></p>
                 </div>
             </section>
+
+            <section class="formacao-container">
+                <div class="formacao-title">
+                    <h2>Formação Educacional</h2>
+                </div>
+                <div class="formacao-mais-detalhes">
+                    
+                </div>
+            </section>
+
         </main>
 
         <footer class="rodape-container">
             <ul class="rodape-links-redes-sociais">
-                <li class="cart-rede"><a href="https://www.linkedin.com/in/maximiano-jos%C3%A9-de-andrade-neto/"><i class="devicon-linkedin-plain"></i></a></li>
-                <li class="cart-rede"><a href="https://github.com/Maximiano-Andrade"><i class="devicon-github-original colored"></i></a></li>
+                <li class="cart-rede"><a href="https://www.linkedin.com/in/maximiano-jos%C3%A9-de-andrade-neto/"><i
+                            class="devicon-linkedin-plain"></i></a></li>
+                <li class="cart-rede"><a href="https://github.com/Maximiano-Andrade"><i
+                            class="devicon-github-original colored"></i></a></li>
             </ul>
 
             <small class="copy">&copy; 2025 Maximiano Jose de Andrade Neto. Todos os direitos reservados.</small>
