--- a/pages/pageProjects/Projects.html
+++ b/pages/pageProjects/Projects.html
@@ -30,16 +30,16 @@
             <nav class="nav-menu">
                 <ul>
                     <li><a href="../../index.html">Home</a></li>
-                    <li><a href="../pageAbout/About.html">About</a></li>
-                    <li><a href="#projects" class="active">Projects</a></li>
-                    <li><a href="../pageContact/Contact.html">Contact</a></li>
+                    <li><a href="../pageAbout/About.html">Sobre</a></li>
+                    <li><a href="#projects" class="active">Projetos</a></li>
+                    <li><a href="../pageContact/Contact.html">Contato</a></li>
                 </ul>
             </nav>
         </header>
 
         <main class="projects-container">
             <div class="title-projects">
-                <h1>PROJECTS DONE</h1>
+                <h1>PROJETOS REALIZADOS</h1>
             </div>
 
             <section class="section-projects">
@@ -50,15 +50,15 @@
                             <h2>Nutritionist</h2>
                         </div>
                         <div class="card-img">
-                            <img src="../../imgs/img-project-01.jpg" alt="">
+                            <img src="../../imgs/img-project-01.jpg" alt="Imgem de projeto">
                         </div>
                         <div class="project-descricao">
-                            <p>Professional website for nutritionists, built with React and Vite. Modern, responsive design focused on usability, featuring sections for services, contact, and blog. Optimized for performance and SEO, perfect for promoting consultations and healthy eating tips.
+                            <p>Site profissional para nutricionistas, desenvolvido com React e Vite. Design moderno e responsivo, focado na usabilidade, com seções para serviços, contato e blog. Otimizado para desempenho e SEO, perfeito para promover consultas e dicas de alimentação saudável.
                             </p>
                         </div>
 
                         <div class="project-tecnologia-utilizador">
-                            <h3>TECHNOLOGY USED</h3>
+                            <h3>TECNOLOGIA UTILIZADA</h3>
                             <ul>
                                 <li><img
                                         src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/react/react-original-wordmark.svg" />
@@ -69,7 +69,7 @@
                             </ul>
                         </div>
                         <div class="veja-mais">
-                            <a href="https://nutritionist-website-nu.vercel.app/" target="_blank">SEE PROJECT</a>
+                            <a href="https://nutritionist-website-nu.vercel.app/" target="_blank">VER PROJETO</a>
                         </div>
                     </li>
 
@@ -81,10 +81,10 @@
                             <img src="../../imgs/img-project-02.jpg" alt="">
                         </div>
                         <div class="project-descricao">
-                            <p>Responsive landing page built with HTML, CSS, and JavaScript. Modern design, focused on performance and adaptable to all devices. Perfect project for businesses or personal portfolios.</p>
+                            <p>Landing page responsiva criada com HTML, CSS e JavaScript. Design moderno, focado em performance e adaptável a todos os dispositivos. Projeto perfeito para empresas ou portfólios pessoais.</p>
                         </div>
                         <div class="project-tecnologia-utilizador">
-                            <h3>TECHNOLOGY USED</h3>
+                            <h3>TECNOLOGIA UTILIZADA</h3>
                             <ul>
                                 <li><img
                                         src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/html5/html5-original-wordmark.svg" />
@@ -98,8 +98,7 @@
                             </ul>
                         </div>
                         <div class="veja-mais">
-                            <a href="https://maximiano-andrade.github.io/projeto-web-pro/" target="_blank">SEE
-                                PROJECT</a>
+                            <a href="https://maximiano-andrade.github.io/projeto-web-pro/" target="_blank">VER PROJETO</a>
                         </div>
                     </li>
 
@@ -111,10 +110,10 @@
                             <img src="../../imgs/img-project-03.jpg" alt="">
                         </div>
                         <div class="project-descricao">
-                            <p>Ebook landing page built with HTML and CSS. Clean, responsive design optimized for conversions. Focus on usability and performance—perfect for promoting digital products.</p>
+                            <p>Landing page para e-book criada com HTML e CSS. Design limpo e responsivo, otimizado para conversões. Foco em usabilidade e desempenho perfeito para promover produtos digitais.</p>
                         </div>
                         <div class="project-tecnologia-utilizador">
-                            <h3>TECHNOLOGY USED</h3>
+                            <h3>TECNOLOGIA UTILIZADA</h3>
                             <ul>
                                 <li><img
                                         src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/html5/html5-original-wordmark.svg" />
@@ -125,7 +124,7 @@
                             </ul>
                         </div>
                         <div class="veja-mais">
-                            <a href="https://maximiano-andrade.github.io/pagina-ebook/" target="_blank">SEE PROJECT</a>
+                            <a href="https://maximiano-andrade.github.io/pagina-ebook/" target="_blank">VER PROJETO</a>
                         </div>
                     </li>
 
@@ -137,10 +136,10 @@
                             <img src="../../imgs/img-project-04.jpg" alt="">
                         </div>
                         <div class="project-descricao">
-                            <p>Hosting services landing page built with HTML and CSS. Modern and responsive design focused on conversion and user experience. Perfect for digital businesses</p>
+                            <p>Landing page para serviços de hospedagem desenvolvida com HTML e CSS. Design moderno e responsivo com foco na conversão e na experiência do usuário. Ideal para negócios digitais.</p>
                         </div>
                         <div class="project-tecnologia-utilizador">
-                            <h3>TECHNOLOGY USED</h3>
+                            <h3>TECNOLOGIA UTILIZADA</h3>
                             <ul>
                                 <li><img
                                         src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/html5/html5-original-wordmark.svg" />
@@ -151,7 +150,7 @@
                             </ul>
                         </div>
                         <div class="veja-mais">
-                            <a href="https://maximiano-andrade.github.io/hdr-host/" target="_blank">SEE PROJECT</a>
+                            <a href="https://maximiano-andrade.github.io/hdr-host/" target="_blank">VER PROJETO</a>
                         </div>
                     </li>
 
