--- a/pages/pageContact/Contact.html
+++ b/pages/pageContact/Contact.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css">
     <!-- FAVICON -->
     <link rel="shortcut icon" href="../../imgs/logo-01.svg" type="image/x-icon">
-    <title>Contact</title>
+    <title>Contato</title>
 </head>
 
 <body>
@@ -33,38 +33,38 @@
             <nav class="nav-menu">
                 <ul>
                     <li><a href="../../index.html">Home</a></li>
-                    <li><a href="../pageAbout/About.html">About</a></li>
-                    <li><a href="../pageProjects/Projects.html">Projects</a></li>
-                    <li><a href="#contact" class="active">Contact</a></li>
+                    <li><a href="../pageAbout/About.html">Sobre</a></li>
+                    <li><a href="../pageProjects/Projects.html">Projetos</a></li>
+                    <li><a href="#contact" class="active">Contato</a></li>
                 </ul>
             </nav>
         </header>
 
         <main class="contact-container">
             <div class="title-contact">
-                <h1>CONTACT</h1>
+                <h1>CONTATO</h1>
             </div>
 
             <section class="form-contact">
-                <h2>Ready to Start a Project?</h2>
+                <h2>Pronto para começar um projeto?</h2>
                 <form>
                     <div class="form-inputs">
                         <div>
                             <label for="name"><i class='bx  bxs-user'></i></label>
-                            <input type="text" id="name" placeholder="Your name:" required>
+                            <input type="text" id="name" placeholder="Seu nome:" required>
                         </div>
                         <div>
                             <label for="email"><i class='bx  bx-at'></i> </label>
-                            <input type="email" id="email" placeholder="Your email:" required>
+                            <input type="email" id="email" placeholder="Seu email:" required>
                         </div>
 
                         <div>
                             <label for="number"><i class='bx  bx-phone'></i> </label>
-                            <input type="text" id="number" placeholder="Your number:">
+                            <input type="text" id="number" placeholder="Seu numero:">
                         </div>
                         <div class="message-btn">
-                            <textarea name="" id="" placeholder="Your message" required></textarea>
-                            <div class="btn-enviar"><input type="submit" value="TO SEND"></div>
+                            <textarea name="" id="" placeholder="Sua mensagem" required></textarea>
+                            <div class="btn-enviar"><input type="submit" value="Enviar"></div>
                         </div>
                     </div>
 
