adicionando formaçao academica na page sobre.

--- a/pages/pageAbout/About.html
+++ b/pages/pageAbout/About.html
@@ -88,7 +88,6 @@
                                 </li>
                             </ul>
 
-
                         </li>
 
 
@@ -99,10 +98,61 @@
 
             <section class="formacao-container">
                 <div class="formacao-title">
-                    <h2>Formação Educacional</h2>
+                    <h1>Formação Educacional</h1>
                 </div>
                 <div class="formacao-mais-detalhes">
+                    <ul class="cards-formacao">
+                        <li>
+                            <div class="card-formacao-title">
+                                <h2>Acadêmica</h2>
+                            </div>
+                            <ul>
+                                <li class="card-academico">
+                                    <div class="card-title-descript">
+                                        <div class="title">
+                                            <h4>Ensinio médio completo</h4>
+                                        </div>
+                                        <div class="descript">
+                                            <p>Ao final de 2017 me formei no ensino médio na escola Amância Dias Sampaio
+                                                em
+                                                Jacareí.</p>
+                                        </div>
+                                    </div>
+                                    <div class="card-dates">
+                                        <p>3 Anos</p>
+                                        <span>Concluido</span>
 
+                                    </div>
+                                </li>
+                            </ul>
+                        </li>
+
+                        <li>
+                            <div class="card-formacao-title">
+                                <h2>Área profissional</h2>
+                            </div>
+                            <ul>
+                                <li class="card-academico">
+                                    <div class="card-title-descript">
+                                        <div class="title">
+                                            <h4>Ensinio médio completo</h4>
+                                        </div>
+                                        <div class="descript">
+                                            <p>Ao final de 2017 me formei no ensino médio na escola Amância Dias Sampaio
+                                                em
+                                                Jacareí.</p>
+                                        </div>
+                                    </div>
+                                    <div class="card-dates">
+                                        <p>3 Anos</p>
+                                        <span>Concluido</span>
+
+                                    </div>
+                                </li>
+                            </ul>
+                        </li>
+
+                    </ul>
                 </div>
             </section>
 
