--- a/pages/pageProjects/Projects.html
+++ b/pages/pageProjects/Projects.html
@@ -23,6 +23,9 @@
 <body>
 
     <div class="global-container">
+
+        <!-- MENU DA PAGINA -->
+
         <header class="header-container">
             <div class="logo">
                 <h1>MAX</h1>
@@ -36,6 +39,8 @@
                 </ul>
             </nav>
         </header>
+
+        <!-- CONTEUDO DA PAGINA -->
 
         <main class="projects-container">
             <div class="title-projects">
@@ -156,8 +161,9 @@
 
                 </ul>
             </section>
-
         </main>
+
+        <!-- RODAPE DA PAGINA -->
 
         <footer class="rodape-container">
             <ul class="rodape-links-redes-sociais">
