--- a/pages/pageAbout/About.html
+++ b/pages/pageAbout/About.html
@@ -102,7 +102,7 @@
                 </div>
                 <div class="formacao-mais-detalhes">
                     <ul class="cards-formacao">
-                        <li>
+                        <li class="container-fromacao">
                             <div class="card-formacao-title">
                                 <h2>Acadêmica</h2>
                             </div>
@@ -110,12 +110,10 @@
                                 <li class="card-academico">
                                     <div class="card-title-descript">
                                         <div class="title">
-                                            <h4>Ensinio médio completo</h4>
+                                            <h4>Ensinio médio</h4>
                                         </div>
                                         <div class="descript">
-                                            <p>Ao final de 2017 me formei no ensino médio na escola Amância Dias Sampaio
-                                                em
-                                                Jacareí.</p>
+                                            <p>Ao final de 2020 me formei no ensino médio na escola C.E.M Carlos Alberto de Moteiro Macedo</p>
                                         </div>
                                     </div>
                                     <div class="card-dates">
@@ -127,7 +125,7 @@
                             </ul>
                         </li>
 
-                        <li>
+                        <li class="container-fromacao">
                             <div class="card-formacao-title">
                                 <h2>Área profissional</h2>
                             </div>
@@ -135,17 +133,15 @@
                                 <li class="card-academico">
                                     <div class="card-title-descript">
                                         <div class="title">
-                                            <h4>Ensinio médio completo</h4>
+                                            <h4>Sem informação</h4>
                                         </div>
                                         <div class="descript">
-                                            <p>Ao final de 2017 me formei no ensino médio na escola Amância Dias Sampaio
-                                                em
-                                                Jacareí.</p>
+                                            <p>Em busca de uma oportunidade</p>
                                         </div>
                                     </div>
                                     <div class="card-dates">
-                                        <p>3 Anos</p>
-                                        <span>Concluido</span>
+                                        <p>Sem informaçõa</p>
+                                        <span>endamento</span>
 
                                     </div>
                                 </li>
