adicionador informção Educacional na page sobre e deixando responsiva

--- a/pages/pageAbout/About.html
+++ b/pages/pageAbout/About.html
@@ -113,7 +113,7 @@
                                             <h4>Ensinio médio</h4>
                                         </div>
                                         <div class="descript">
-                                            <p>Ao final de 2020 me formei no ensino médio na escola C.E.M Carlos Alberto de Moteiro Macedo</p>
+                                            <p>Concluí o Ensino Médio em dezembro de 2020 no Colégio Estadual Carlos Alberto de Monteiro Macedo (C.E.M.).</p>
                                         </div>
                                     </div>
                                     <div class="card-dates">
@@ -122,6 +122,40 @@
 
                                     </div>
                                 </li>
+
+                                <li class="card-academico">
+                                    <div class="card-title-descript">
+                                        <div class="title">
+                                            <h4>Curso superior de Análise e Desenvolvimento de Sistemas</h4>
+                                        </div>
+                                        <div class="descript">
+                                            <p>Estou iniciando um curso de ADS na UNINTER em 2025.</p>
+                                        </div>
+                                    </div>
+                                    <div class="card-dates">
+                                        <p>2 Anos 5 mes</p>
+                                        <span>Em Andamento</span>
+
+                                    </div>
+                                </li>
+
+                                <li class="card-academico">
+                                    <div class="card-title-descript">
+                                        <div class="title">
+                                            <h4>Idiomas</h4>
+                                        </div>
+                                        <div class="descript">
+                                            <p>Português: <span>Nativo </span></p>
+                                            <p>Inglês: <span>Básico</span></p>
+                                        </div>
+                                    </div>
+                                    <!-- <div class="card-dates">
+                                        <p>2 Anos 5 mes</p>
+                                        <span>Em Andamento</span>
+
+                                    </div> -->
+                                </li>
+
                             </ul>
                         </li>
 
@@ -141,7 +175,7 @@
                                     </div>
                                     <div class="card-dates">
                                         <p>Sem informaçõa</p>
-                                        <span>endamento</span>
+                                        <span>Sem informação</span>
 
                                     </div>
                                 </li>
