alteração de title de page

--- a/pages/pageAbout/About.html
+++ b/pages/pageAbout/About.html
@@ -21,7 +21,7 @@
 
     <!-- FAVICON -->
     <link rel="shortcut icon" href="../../imgs/logo-01.svg" type="image/x-icon">
-    <title>About</title>
+    <title>Sobre</title>
 </head>
 <body>
     <div class="global-container">
