--- a/pages/pageProjects/Projects.html
+++ b/pages/pageProjects/Projects.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="../pageProjects/style.css">
     <!-- FAVICON -->
     <link rel="shortcut icon" href="../../imgs/logo-01.svg" type="image/x-icon">
-    <title>Projects</title>
+    <title>Projetos</title>
 </head>
 
 <body>
