corrijindo nomes de class da page sobre

--- a/pages/pageAbout/About.html
+++ b/pages/pageAbout/About.html
@@ -110,7 +110,7 @@
                 </div>
                 <div class="formacao-mais-detalhes">
                     <ul class="cards-formacao">
-                        <li class="container-fromacao">
+                        <li class="container-formacao">
                             <div class="card-formacao-title">
                                 <h2>Acadêmica</h2>
                             </div>
@@ -162,7 +162,7 @@
 
                             </ul>
                         </li>
-                        <li class="container-fromacao">
+                        <li class="container-formacao">
                             <div class="card-formacao-title">
                                 <h2>Área profissional</h2>
                             </div>
