--- a/index.html
+++ b/index.html
@@ -4,16 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <!-- FONT -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Anton&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
+
     <!-- Link CSS -->
     <link rel="stylesheet" href="./style/style.css">
+
     <!-- icon -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css">
+    
     <!-- FAVICON -->
     <link rel="shortcut icon" href="./imgs/logo-01.svg" type="image/x-icon">
     <title>PORTFÓLIO</title>
@@ -21,6 +25,8 @@
 
 <body>
     <div class="global-container">
+
+        <!-- MENU -->
         <header class="header-container">
             <div class="logo">
                 <h1>MAX</h1>
@@ -34,6 +40,8 @@
                 </ul>
             </nav>
         </header>
+
+        <!-- CORPO DA PAGINA -->
         <main class="main-container">
             <section class="welcome-section">
                 <div class="text-welcome">
@@ -59,10 +67,10 @@
                         </li>
                     </ul>
                 </div>
-
             </section>
         </main>
 
+        <!-- RODAPE DA PAGINA -->
         <footer class="rodape-container">
             <ul class="rodape-links-redes-sociais">
                 <li class="cart-rede"><a href="https://www.linkedin.com/in/maximiano-jos%C3%A9-de-andrade-neto/"><i class="devicon-linkedin-plain"></i></a></li>
