--- a/pages/pageAbout/About.html
+++ b/pages/pageAbout/About.html
@@ -4,17 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <!-- FONT -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Anton&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
+
     <!-- STYLE CSS -->
     <link rel="stylesheet" href="../../style/style.css">
     <link rel="stylesheet" href="style.css">
+
     <!-- icon -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css">
+
     <!-- FAVICON -->
     <link rel="shortcut icon" href="../../imgs/logo-01.svg" type="image/x-icon">
     <title>About</title>
@@ -22,6 +26,8 @@
 
 <body>
     <div class="global-container">
+
+        <!-- MENU DA PAGINA -->
         <header class="header-container">
             <div class="logo">
                 <h1>MAX</h1>
@@ -36,12 +42,12 @@
             </nav>
         </header>
 
+        <!-- CORPO DA PAGINA -->
         <main class="about-container">
             <div class="title-about">
                 <h1>Sobre</h1>
             </div>
             <section class="about-section">
-
                 <div class="foto-about">
                 </div>
                 <div class="text-about">
@@ -113,7 +119,8 @@
                                             <h4>Ensinio médio</h4>
                                         </div>
                                         <div class="descript">
-                                            <p>Concluí o Ensino Médio em dezembro de 2020 no Colégio Estadual Carlos Alberto de Monteiro Macedo (C.E.M.).</p>
+                                            <p>Concluí o Ensino Médio em dezembro de 2020 no Colégio Estadual Carlos
+                                                Alberto de Monteiro Macedo (C.E.M.).</p>
                                         </div>
                                     </div>
                                     <div class="card-dates">
@@ -149,16 +156,10 @@
                                             <p>Inglês: <span>Básico</span></p>
                                         </div>
                                     </div>
-                                    <!-- <div class="card-dates">
-                                        <p>2 Anos 5 mes</p>
-                                        <span>Em Andamento</span>
-
-                                    </div> -->
                                 </li>
 
                             </ul>
                         </li>
-
                         <li class="container-fromacao">
                             <div class="card-formacao-title">
                                 <h2>Área profissional</h2>
@@ -185,9 +186,9 @@
                     </ul>
                 </div>
             </section>
-
         </main>
 
+        <!-- RODAPE DA PAGINA-->
         <footer class="rodape-container">
             <ul class="rodape-links-redes-sociais">
                 <li class="cart-rede"><a href="https://www.linkedin.com/in/maximiano-jos%C3%A9-de-andrade-neto/"><i
