--- a/pages/pageContact/Contact.html
+++ b/pages/pageContact/Contact.html
@@ -4,20 +4,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <!-- FONT -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Anton&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
+
     <!-- ICONS -->
     <link href='https://cdn.boxicons.com/fonts/basic/boxicons.min.css' rel='stylesheet'>
     <link href='https://cdn.boxicons.com/fonts/brands/boxicons-brands.min.css' rel='stylesheet'>
+
     <!-- STYLE CSS -->
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="../../style/style.css">
+
     <!-- icon -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css">
+
     <!-- FAVICON -->
     <link rel="shortcut icon" href="../../imgs/logo-01.svg" type="image/x-icon">
     <title>Contato</title>
@@ -26,6 +31,8 @@
 <body>
 
     <div class="global-container">
+
+        <!-- MENU DA PAGINA -->
         <header class="header-container">
             <div class="logo">
                 <h1>MAX</h1>
@@ -40,6 +47,7 @@
             </nav>
         </header>
 
+        <!-- CORPO DA PAGINA -->
         <main class="contact-container">
             <div class="title-contact">
                 <h1>CONTATO</h1>
@@ -57,7 +65,6 @@
                             <label for="email"><i class='bx  bx-at'></i> </label>
                             <input type="email" id="email" placeholder="Seu email:" required>
                         </div>
-
                         <div>
                             <label for="number"><i class='bx  bx-phone'></i> </label>
                             <input type="text" id="number" placeholder="Seu numero:">
@@ -67,24 +74,22 @@
                             <div class="btn-enviar"><input type="submit" value="Enviar"></div>
                         </div>
                     </div>
-
                 </form>
             </section>
-
         </main>
 
+        <!-- RODAPE DA PAGINA -->
         <footer class="rodape-container">
             <ul class="rodape-links-redes-sociais">
-                <li class="cart-rede"><a href="https://www.linkedin.com/in/maximiano-jos%C3%A9-de-andrade-neto/"><i class="devicon-linkedin-plain"></i></a></li>
-                <li class="cart-rede"><a href="https://github.com/Maximiano-Andrade"><i class="devicon-github-original colored"></i></a></li>
+                <li class="cart-rede"><a href="https://www.linkedin.com/in/maximiano-jos%C3%A9-de-andrade-neto/"><i
+                            class="devicon-linkedin-plain"></i></a></li>
+                <li class="cart-rede"><a href="https://github.com/Maximiano-Andrade"><i
+                            class="devicon-github-original colored"></i></a></li>
             </ul>
-
             <small class="copy">&copy; 2025 Maximiano Jose de Andrade Neto. Todos os direitos reservados.</small>
-
         </footer>
 
     </div>
 
 </body>
-
 </html>
