--- a/pages/pageAbout/About.html
+++ b/pages/pageAbout/About.html
@@ -23,7 +23,6 @@
     <link rel="shortcut icon" href="../../imgs/logo-01.svg" type="image/x-icon">
     <title>About</title>
 </head>
-
 <body>
     <div class="global-container">
 
@@ -47,6 +46,8 @@
             <div class="title-about">
                 <h1>Sobre</h1>
             </div>
+
+            <!-- SOBRE -->
             <section class="about-section">
                 <div class="foto-about">
                 </div>
@@ -102,6 +103,7 @@
                 </div>
             </section>
 
+            <!-- FORMACAO -->
             <section class="formacao-container">
                 <div class="formacao-title">
                     <h1>Formação Educacional</h1>
@@ -203,5 +205,4 @@
 
     </div>
 </body>
-
 </html>
